[tool.poetry]
name = "db1000n-docs"
version = "0.1.0"
description = "Documentation for DB1000N project with MkDocs"
authors = ["Bohdan Ivashko <https://github.com/Arriven>"]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6"
mkdocs-include-markdown-plugin = "^7.0"
mkdocs-material = "^9.6"
mkdocs-minify-plugin = "^0.8"
mkdocs-redirects = "^1.2"
mkdocs-static-i18n = "^1.3"
mkdocs-git-tag-plugin = "^0.1.0"
mdx_truly_sane_lists = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
